Fixed layout issues for mobile devices + smaller UI changes

--- a/assets/default/sass/style.scss
+++ b/assets/default/sass/style.scss
@@ -14,24 +14,19 @@
     // Font: Font-Awesome
     @import "fonts/font-awesome/font-awesome";
 
-    // Bootstrap Datepicker
-    @import "bootstrap-datepicker";
 
 /* =============================================================================
    Base Styles
    ========================================================================== */
 
-    html, body, .sidebar {
-        height: 100%;
-    }
-
-    // overflow-x fix white space at the right when browser window is resized
     html, body {
-        overflow-y: hidden;
+        height: 100%;
+        -webkit-font-smoothing: subpixel-antialiased;
     }
 
     body {
         background-color: #fff;
+        padding-top: 50px;
     }
 
     img {
@@ -46,10 +41,78 @@
         margin: 0;
     }
 
+    ::-webkit-scrollbar {
+        width: 12px;
+    }
+    ::-webkit-scrollbar-track {
+        background-color: #eaeaea;
+        border-left: 1px solid #ccc;
+    }
+    ::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+        background-color: #aaa;
+    }
+
 
 /* =============================================================================
    Components
    ========================================================================== */
+
+    // Bootstrap Datepicker
+    // Fix input alignment
+    .controls.date {
+        margin-left: 10px;
+        padding: 0;
+    }
+
+    .datepicker .icon-arrow-left {
+        @extend .fa;
+        @extend .fa-arrow-left;
+        color: #777;
+    }
+
+    .datepicker .icon-arrow-right {
+        @extend .fa;
+        @extend .fa-arrow-right;
+        color: #777;
+    }
+
+    .datepicker .day.active {
+        background: #3276b1;
+        color: #efefef;
+        &:hover {
+            background: #3276b1;
+            color: #fff;
+        }
+    }
+
+    .datepicker .day:hover {
+        background: #efefef;
+        color: #3276b1;
+        cursor: crosshair;
+    }
+
+    // Fix datepicker icon alingment
+    .input-append.date .add-on i,
+    .input-prepend.date .add-on i {
+        width: auto;
+        height: auto;
+        display: inline;
+    }
+
+    // Display datepicker over modal box
+    .datepicker.dropdown-menu {
+        padding: 5px;
+        z-index: 9999;
+    }
+
+    // Reset padding on Date Picker
+    .datepicker table th:first-child,
+    .datepicker table td:first-child  {
+        padding-left:5px;
+    }
 
 
 /* =============================================================================
@@ -271,9 +334,6 @@
                 text-align: left;
             }
 
-            .divider-vertical {
-                margin: 0;
-            }
         } // /.settings
 
     } // /.navbar
@@ -340,8 +400,10 @@
    ========================================================================== */
 
     .sidebar {
+        @extend .col-sm-1;
+        height: 100%;
+        padding: 0;
         background: #eee;
-        float: left;
         border-right: 1px solid #ddd;
 
         ul {
@@ -356,6 +418,7 @@
             border-bottom: 1px solid #ddd;
             font-size: 24px;
             color: #555;
+            text-align: center;
 
             &:hover {
                 background: #e5e5e5;
@@ -385,6 +448,9 @@
 	    .alert {
 			margin: 15px;
 	    }
+        .tab-pane {
+            padding-bottom: 50px;
+        }
     }
 
     #panel-overdue-invoices,
@@ -414,7 +480,9 @@
     }
 
     .main-area {
-        margin-left: 64px;
+        @extend .col-xs-12;
+        @extend .col-sm-11;
+        padding: 0;
 
         .content,
         .tab-info {
@@ -456,15 +524,6 @@
         margin-top: 40px;
         overflow-y: auto;
     }
-
-   .main-area .container-fluid,
-   .main-area .content,
-   .main-area .table-content,
-   .main-area .tab-content {
-      position: relative;
-      overflow-x: hidden;
-      overflow-y: scroll;
-   }
 
    .details-box {
        @extend .panel;
@@ -772,13 +831,6 @@
         font-weight: bold;
     }
 
-    .hidden-quote, .hidden-invoice {
-      display: none;
-    }
-
-    .show {
-      display: block;
-    }
 
 /* =============================================================================
    Responsive Media Queries
@@ -786,6 +838,10 @@
 
 // Styles for large devices (< lg)
 @media (min-width: 992px) {
+
+    .navbar-nav .visible-lg {
+            display: inline-block !important;
+    }
 
 }
 
@@ -797,12 +853,11 @@
 // Styles for  small devices (xs > sm)
 @media (max-width: 768px) {
 
-    // Remove default padding set in bootstrap/_responsive-767px-max.scss
-    body { padding: 0; }
-
     .sidebar li a { padding: 7px; }
 
     .main-area { margin-left: 0; }
+
+    .navbar-nav { margin: 7px 0; }
 
     .container-fluid { padding: 0 20px; }
 
@@ -819,6 +874,18 @@
 // Styles for very small devices (< xs)
 @media (max-width: 480px) {
 
+    .navbar {
+        -webkit-box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow:    0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+        box-shadow:         0px 3px 5px 0px rgba(0, 0, 0, 0.3);
+    }
+    .navbar-nav {
+        margin: 7px 0;
+
+        .visible-xs {
+            display: inline-block !important;
+        }
+    }
     .headerbar { padding: 8px !important; }
     .pull-right { margin-left: 5px !important; }
 
